feat(stream): add option to include custom HTML into <head> for stream --serve

--- a/assets/index.html
+++ b/assets/index.html
@@ -36,6 +36,9 @@
       box-shadow: color-mix(in oklab, var(--term-color-background) 50%, black) 0px 0px 60px 5px;
     }
   </style>
+
+  {{{html_head}}}
+
 </head>
 <body>
   <script src="asciinema-player.min.js"></script>
