Enable Nerd Font Symbols in the player when streaming locally

--- a/assets/index.html
+++ b/assets/index.html
@@ -5,6 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="asciinema-player.css">
   <style>
+    @font-face {
+      font-family: "Symbols Nerd Font";
+      src: local(SymbolsNerdFont-Regular),
+           url("/SymbolsNerdFont-Regular.woff2") format("woff2");
+    }
+
     :root {
       --term-color-background: black;
     }
